--- a/css/style.css
+++ b/css/style.css
@@ -1,333 +1,255 @@
-@charset "utf-8";
-/* CSS Document */
 body {
 	font-family: "Cuprum", "PT Sans", "Arial", sans-serif;
-	background-color: white;
+	background-color: #fff;
 	margin: 0px;
 	padding: 0px;
 }
+
 a {
 	text-decoration: none;
 }
+
 li {
 	list-style: none;
 }
+
 .upper-menu, 
 .links {
 	background-color: #293449;
 }
+
 .main-info {
 	background-color: #f2f6f8;
 }
+
 .main-menu, 
 .down-menu {
 	background-color: #32425c;
 }
+
 .upper-menu a,
 .main-menu a,
 .down-menu a {
 	color: white;
 }
+
 .down-menu p,
 .links p,
 .tab-article {
 	color: white;
 }
+
 .upper-logo,
 .down-logo {
 	background: #ee3643;
 }
+
 .upper-logo {
-  width: 220px;
-  height: 51px;
+	width: 220px;
+	height: 51px;
 }
+
 .upper-technomart {
-  width: 109px;
-  height: 19px;
+	width: 109px;
+	height: 19px;
 }
+
 .down-logo {
-  width: 220px;
-  height: 72px;
+	width: 220px;
+	height: 72px;
 }
+
 .down-technomart {
-  width: 138px;
-  height: 23px;
+	width: 138px;
+	height: 23px;
 }
+
 .menu-pages-mat a,
 .tab-links a {
-  color: rgb(255, 218, 150);
+	color: #ffd996;
 }
-.upper-menu div:nth-child(3) a,
-.upper-menu div:nth-child(4) a,
-.upper-menu div:nth-child(5) a {
-  font-size: 17px;
-  font-family: "Cuprum";
-  line-height: 18px;
+
+.main-action {
+	font-size: 17px;
+	font-family: "Cuprum", "Arial";
+	line-height: 18px;
 }
+
 .main-describe {
-  font-family: "Cuprum";
-  font-style:italic;
-  font-size: 16px;
-  line-height: 23px;
-  color: #ee3643;
+	font-family: "Cuprum", "Arial";
+	font-style: italic;
+	font-size: 16px;
+	line-height: 23px;
+	color: #ee3643;
 }
+
 .tel {
-  font-family: "Cuprum";
-  font-size: 21px;
-  line-height: 21px;
-  color: #ee3643;
+	font-family: "Cuprum", "Arial";
+	font-size: 21px;
+	line-height: 21px;
+	color: #ee3643;
 }
+
 .main-info p {
-  font-size: 14px;
-  font-family: "Cuprum";
-  color: rgb(50, 66, 92);
-  line-height: 24px;
+	font-size: 14px;
+	font-family: "Cuprum", "Arial";
+	color: #32425c;
+	line-height: 24px;
 }
+
 .enter,
 .reg {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 21px;
 	line-height: 21px;
 	color: black;
 }
+.reg {
+	display: inline-block;
+	background-color: #fff;
+	width: 150px;
+	height: 45px; 
+}
+
+.enter {
+	background-color: #fff;
+	border: none;
+	height: 45px;
+	width: 121px;
+}
 .main-menu a {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 17px;
 	line-height: 17px;
 }
+
 .orders-cab a {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 16px;
 	line-height: 18px;
 	color: #32425c;
 	text-decoration: underline;
 }
+
 .navigation a {
-	font-family: "PT Sans";
+	font-family: "PT Sans", "Arial";
 	font-size: 13px;
 	line-height: 18px;
-	color: rgb(0, 0, 0);
+	color: #000;
 }
+
 .add-info h3 {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 30px;
-	color: rgb(0, 0, 0);
+	color: #000;
 	line-height: 1;
 }
-.add-info p {
-	font-family: "PT Sans";
+
+.add-info .add-info-text {
+	font-family: "PT Sans", "Arial";
 	font-size: 13px;
-	color: rgb(0, 0, 0);
+	color: #000;
 	line-height: 1;
 }
-.delivery li {
-	font-family: "Cuprum";
+
+.name {
+	font-family: "Cuprum", "Arial";
 	font-size: 18px;
-	color: rgb(0, 0, 0);
+	color: #000;
 	line-height: 2;
 }
+
 .about-us {
 	background-color: #ee3643;
 	width: 220px;
-    height: 38px;
+	height: 10px;
+	color: #fff;
 }
+
 .write-to-us {
 	background-color: #ee3643;
 	width: 300px;
-    height: 38px;
-	margin-bottom: 2px; /*предварительный маргин! Позже исправить!*/
+	height: 10px;
+	color: #fff;
 }
-.info-message {
-	color: white;
-	font-family: "Cuprum";
-	font-size: 14px;
-	line-height: 1;
-}
+
 .down-menu p {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 18px;
 }
+
 .menu-pages,
 .menu-pages-mat {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 18px;
 }
+
 .links p,
 .tab-article,
 .tab-links {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 16px;
 	line-height: 18px;
 }
+
 .visually-hidden {
 	display: none;
 }
+
 .sub-menu h3 {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 30px;
 	line-height: 30px;
 }
+
 .sub-menu h4 {
-	font-family: "PT Sans";
+	font-family: "PT Sans", "Arial";
 	font-size: 17px;
 	line-height: 30px;
 	font-weight: bold;
 }
+
 .sub-menu ul li {
-	font-family: "PT Sans";
+	font-family: "PT Sans", "Arial";
 	font-size: 15px;
 	line-height: 20px;
 	font-weight: normal;
 }
+
 .sub-menu button {
-	font-family: "PT Sans";
+	font-family: "PT Sans", "Arial";
 	font-size: 13px;
 	line-height: 18px;
 	font-weight: normal;
 }
+
 .product-name {
-	font-family: "PT Sans";
+	font-family: "PT Sans", "Arial";
 	font-size: 18px;
 	line-height: 20px;
 	font-weight: bold;
 }
+
 .old-value,
 .new-value,
 .main-value {
-	font-family: "PT Sans";
+	font-family: "PT Sans", "Arial";
 	font-size: 17px;
 	line-height: 18px;
 	font-weight: bold;
 }
+
 .old-value {
 	text-decoration: line-through;
 	color: #999999;
 }
+
 .buy,
 .bookmarks {
-	font-family: "Cuprum";
+	font-family: "Cuprum", "Arial";
 	font-size: 14px;
 	line-height: 18px;
 }
-/*
-low buttons 
-about us
-.btn_copy_23 {
-  background-image: url("btn copy 23.png");
-  opacity: 0;
-  position: absolute;
-  left: 130px;
-  top: 2727px;
-  width: 220px;
-  height: 38px;
-  z-index: 31;
-}
-write to us 
-.btn {
-  background-image: url("btn.png");
-  opacity: 0;
-  position: absolute;
-  left: 770px;
-  top: 2727px;
-  width: 300px;
-  height: 38px;
-  z-index: 28;
-}
-
-
-add-info
-.КОМПАНИЯ_«Техномарт»__Настоящий_мужской_шоппинг {
-  font-size: 30px;
-  font-family: "Cuprum";
-  color: rgb(0, 0, 0);
-  text-transform: uppercase;
-  line-height: 1;
-  text-align: left;
-  position: absolute;
-  left: 129.987px;
-  top: 2423.4px;
-  width: 519px;
-  height: 293px;
-  z-index: 36;
-}
-
-navigation
-.Перфораторы {
-  font-size: 3.709px;
-  font-family: "PTSans";
-  color: rgb(0, 0, 0);
-  text-transform: uppercase;
-  line-height: 1.384;
-  text-align: left;
-  -moz-transform: matrix( 3.50541372649093,0,0,3.50541372649093,0,0);
-  -webkit-transform: matrix( 3.50541372649093,0,0,3.50541372649093,0,0);
-  -ms-transform: matrix( 3.50541372649093,0,0,3.50541372649093,0,0);
-  position: absolute;
-  left: 430.112px;
-  top: 346.933px;
-  z-index: 157;
-}
-
-
-верхний логотип
-.Layer_90_copy_2 {
-  background-image: url("Layer 90 copy 2.png");
-  position: absolute;
-  left: 130px;
-  top: -4px;
-  width: 220px;
-  height: 51px;
-  z-index: 198;
-     верхняя надпись
-.ТЕХНОМАРТ {
-  background-color: rgb(255, 255, 255);
-  position: absolute;
-  left: 185px;
-  top: 13px;
-  width: 109px;
-  height: 19px;
-  z-index: 229;
-}
-
-}
- нижний логотип
-.Layer_90_copy {
-  background-image: url("Layer 90 copy.png");
-  position: absolute;
-  left: 130px;
-  top: 2847px;
-  width: 220px;
-  height: 72px;
-  z-index: 24;
-     нижняя надпись
-.ТЕХНОМАРТ {
-  background-color: rgb(255, 255, 255);
-  position: absolute;
-  left: 171px;
-  top: 2871px;
-  width: 138px;
-  height: 23px;
-  z-index: 25;
-}
-
-}
-
-.г__Санкт_Петербург__ул__Б__Конюшенная__д__19_8 {
-  font-size: 14px;
-  font-family: "Cuprum";
-  color: rgb(50, 66, 92);
-  line-height: 1.714;
-  text-align: center;
-  position: absolute;
-  left: 420.204px;
-  top: 165.32px;
-  width: 250px;
-  height: 13px;
-  z-index: 215;
-}
-
-
-*/
 
 
 
