--- a/css/style.css
+++ b/css/style.css
@@ -752,3 +752,51 @@ li {
 	width: 940px;
 	display: flex;
 }
+.upper-logo:hover {
+	background-color: #ca2c37;
+	box-shadow: 0px 4px 0px 0px #9a212a;
+}
+.upper-logo:active {
+	background-color: #ba2732;
+	box-shadow: 0px 4px 0px 0px #8e1e26;
+}
+.search:hover {
+	background-color: #212a3a;
+}
+.find-text:hover {
+	background-color: #212a3a;
+}
+.find-text:focus {
+	background-color: #fff;
+}
+.book:hover,
+.cart:hover {
+	background-color: #212a3a;
+}
+.book:active,
+.cart:active {
+	background-color: #161d29;
+	color: #8b8e94;
+}
+.order:hover {
+	background-color: #5fbb2d;
+}
+.order:active {
+	background-color: #518534;
+	color: #8b8e94;
+}
+.enter:hover,
+.reg:hover {
+	color: #ee3643;
+}
+.enter:active,
+.reg:active {
+	color: #c5c5c5;
+}
+.main-menu a:hover {
+	background-color: #293449;
+}
+.main-menu a:active {
+	background-color: #1d2739;
+	color: #8b8e94;
+}
