--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ li {
 	height: 64px;
 	align-self: center;
 	justify-content: center;
+	margin-left: 52px;
 }
 .tel {
 	font-family: "Cuprum", "Arial";
@@ -106,7 +107,7 @@ li {
 	width: 150px;
 	height: 45px;
 	align-items: center;
-	justify-content: center; 
+	justify-content: center;
 }
 .enter {
 	background-color: #fff;
@@ -157,6 +158,7 @@ li {
 	text-align: center;
 	padding-top: 9px;
 	border-radius: 3px;
+	margin-top: 30px;
 }
 .write-to-us {
 	background-color: #ee3643;
@@ -315,7 +317,7 @@ li {
 	display: flex;
 	align-items: center;
 	height: 75px;
-	margin-left: 70px;
+	margin-left: 18px;
 	align-self: flex-start;
 	margin-right: 106px;
 }
@@ -374,7 +376,6 @@ li {
 	display: flex;
 	flex-direction: column;
 }
-
 .tab-article {
 	display: flex;
 	flex-direction: row;
@@ -391,7 +392,6 @@ li {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	width: 114px;
 	align-items: center;
 	height: 108px;
 }
@@ -478,7 +478,6 @@ li {
 .delivery {
 	padding-left: 0px;
 }
-
 .cart-catalog {
 	width: 160px;
 	height: 46px;
@@ -519,7 +518,7 @@ li {
 	display: flex;
 	align-items: center;
 	height: 75px;
-	margin-left: 70px;
+	margin-left: 20px;
 	align-self: flex-start;
 	margin-right: 90px;
 }
@@ -627,17 +626,13 @@ li {
 .dash-flex {
 	display: flex;
 	flex-direction: row;
-	align-items: center; 
+	align-items: center;
 }
 .menu-pages a {
 	margin-left: 70px;
 }
-.checkbox-cast {
-	
-}
-.radio-cast {
-	
-}
+.checkbox-cast {}
+.radio-cast {}
 .descrip-item {
 	display: flex;
 	flex-direction: column;
@@ -646,19 +641,21 @@ li {
 	margin-right: auto;
 	text-align: center;
 	width: 160px;
+	padding-bottom: 2px;
 }
 .item-flex {
 	display: flex;
 	flex-direction: column;
 	width: 220px;
+	height: 318px;
 }
 .new-value {
 	width: 141px;
 	height: 38px;
 	background-image: url("../img/btn copy 14.svg");
 	box-sizing: border-box;
-	padding-top: 8px;
 	color: #fff;
+	padding-top: 10px;
 }
 .new-value {
 	display: flex;
@@ -697,9 +694,8 @@ li {
 	align-items: center;
 	border: 2px solid #63a63e;
 	color: #32425c;
-	margin-bottom: 50px
+	margin-bottom: 50px;
 }
-
 .cart-cat {
 	margin-right: 20px;
 	margin-left: 15px;
@@ -709,7 +705,7 @@ li {
 	height: 38px;
 	background-image: url("../img/btn copy 14.svg");
 	box-sizing: border-box;
-	padding-top: 8px;
+	padding-top: 10px;
 	color: #fff;
 	display: flex;
 	justify-content: center;
@@ -780,14 +776,18 @@ li {
 .find-text:focus {
 	background-color: #fff;
 }
-.book:hover,
-.cart:hover {
+.book:hover, .cart:hover {
 	background-color: #212a3a;
 }
-.book:active,
-.cart:active {
+.book:hover .bookmark-pic, .cart:hover .cart-pic {
+	fill: #fff;
+}
+.book:active, .cart:active {
 	background-color: #161d29;
 	color: #8b8e94;
+}
+.book:active .bookmark-pic, .cart:active .cart-pic {
+	fill: #8b8e94;
 }
 .order:hover {
 	background-color: #5fbb2d;
@@ -796,13 +796,17 @@ li {
 	background-color: #518534;
 	color: #8b8e94;
 }
-.enter:hover,
-.reg:hover {
+.enter:hover, .reg:hover {
 	color: #ee3643;
 }
-.enter:active,
-.reg:active {
+.enter:hover .enter-pic {
+	fill: #32425c;
+}
+.enter:active, .reg:active {
 	color: #c5c5c5;
+}
+.enter:active .enter-pic {
+	fill: #c5c5c5;
 }
 .main-menu a:hover {
 	background-color: #293449;
@@ -936,7 +940,6 @@ li {
 }
 .circle input[type="checkbox"]:hover + .checkbox-indicator {
 	border-color: #b5b5b5;
-	
 }
 .circle {
 	position: relative;
@@ -944,6 +947,7 @@ li {
 	cursor: pointer;
 	font-size: 15px;
 	display: flex;
+	line-height: 28px;
 }
 .form-pad li {
 	height: 30px;
@@ -954,6 +958,7 @@ li {
 	padding-left: 40px;
 	cursor: pointer;
 	font-size: 15px;
+	padding-top: 7px;
 }
 .radio-bat input[type="radio"] + .radio-indicator {
 	position: absolute;
@@ -972,6 +977,535 @@ li {
 	background-color: #fff;
 	border: 1px solid #c5c5c5;
 }
+.prof-but:hover .profile-icon, .prof-but:hover .logout-icon {
+	fill: #32425c;
+}
+.profile:active .profile-icon {
+	fill: #c5c5c5;
+}
+.profile:active {
+	color: #c5c5c5;
+}
+.prof-logout:active .logout-icon {
+	fill: #c5c5c5;
+}
+.ic-background:first-child {
+	margin-right: 2px;
+}
+.ic-background:last-child {
+	margin-left: 2px;
+}
+.ic-background:nth-child(2) {
+	margin-right: 3px;
+	margin-left: 3px;
+}
+.item-flex:hover .perf-log {
+	display: none;
+}
+.item-flex:hover .buy-bookmarks {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.item-flex:hover {
+	box-shadow: 0px 5px 35px -10px;
+}
+.buy-bookmarks {
+	display: none;
+}
+.buy:hover .cart-pic-cat-gr {
+	opacity: 1;
+}
+.buy-bookmarks {
+	height: 170px;
+}
+.orange {
+	width: 300px;
+	height: 123px;
+	background-color: #ffbf47;
+	background-image: url("../img/icon-1.svg");
+	background-repeat: no-repeat;
+	background-position: 213px 31px;
+	color: #fff;
+	font-size: 24px;
+	font-family: Cuprum;
+	font-weight: bold;
+	box-sizing: border-box;
+	padding-left: 23px;
+}
+.blue {
+	width: 300px;
+	height: 123px;
+	background-color: #3bbce3;
+	background-image: url("../img/icon-2.svg");
+	background-repeat: no-repeat;
+	background-position: 197px 33px;
+	color: #fff;
+	font-size: 24px;
+	font-family: Cuprum;
+	font-weight: bold;
+	box-sizing: border-box;
+	padding-top: 27px;
+	padding-left: 23px;
+}
+.velvet {
+	width: 300px;
+	height: 123px;
+	background-color: #dc91d8;
+	background-image: url("../img/icon-3.svg");
+	background-repeat: no-repeat;
+	background-position: 191px 31px;
+	color: #fff;
+	font-size: 24px;
+	font-family: Cuprum;
+	font-weight: bold;
+	box-sizing: border-box;
+	padding-top: 27px;
+	padding-left: 23px;
+}
+.green {
+	width: 300px;
+	height: 123px;
+	background-color: #8ed78f;
+	background-image: url("../img/icon-4.svg");
+	background-repeat: no-repeat;
+	background-position: 196px 26px;
+	color: #fff;
+	font-size: 24px;
+	font-family: Cuprum;
+	font-weight: bold;
+	box-sizing: border-box;
+	padding-top: 27px;
+	padding-left: 23px;
+}
+.orange-deliv {
+	width: 300px;
+	height: 123px;
+	background-color: #ffbf47;
+	background-image: url("../img/icon-5.svg");
+	background-repeat: no-repeat;
+	background-position: 191px 32px;
+	color: #fff;
+	font-size: 24px;
+	font-family: Cuprum;
+	font-weight: bold;
+	box-sizing: border-box;
+	padding-top: 27px;
+	padding-left: 23px;
+}
+.big-slider {
+	width: 620px;
+	height: 266px;
+	background-color: dimgray;
+	color: #fff;
+	box-sizing: border-box;
+}
+.big-slider h3 {
+	font-family: Cuprum;
+	font-weight: bold;
+	font-size: 36px;
+	text-transform: uppercase;
+	margin: 0px;
+}
+.big-slider p {
+	font-family: Cuprum;
+	font-weight: normal;
+	font-size: 18px;
+	margin-top: 7px;
+}
+.high-visual {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-top: 59px;
+}
+.low-visual {
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+.green-orange {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.visual-link {
+	color: #fff;
+	font-family: Cuprum;
+	font-weight: normal;
+	font-size: 14px;
+	text-transform: uppercase;
+	background-color: rgba(178, 178, 178, 0.50);
+	display: block;
+	width: 135px;
+	height: 38px;
+	box-sizing: border-box;
+	text-align: center;
+	padding-top: 11px;
+	margin-top: 14px;
+	border-radius: 3px;
+}
+.visual-link:hover {
+	background-color: rgba(178, 178, 178, 0.75);
+}
+.visual-link:active {
+	background-color: rgba(178, 178, 178, 1);
+}
+.flag-main {
+	position: absolute;
+	margin-left: 217px;
+}
+.new-cont {
+	padding-top: 27px;
+}
+.popular-header {
+	display: flex;
+	flex-direction: row;
+	box-sizing: border-box;
+	justify-content: space-between;
+	align-items: baseline;
+	background-color: #f9f5f0;
+	padding: 25px 25px 25px 30px;
+	margin-top: 53px;
+}
+.popular-header h3 {
+	font-family: Cuprum;
+	font-weight: normal;
+	font-size: 30px;
+	color: #32425c;
+	margin: 0px;
+}
+.popular-header a {
+	background-color: #ee3643;
+	color: #fff;
+	width: 253px;
+	height: 38px;
+	box-sizing: border-box;
+	text-align: center;
+	padding-top: 10px;
+	border-radius: 3px;
+}
+.popular-header a:hover {
+	background-color: #ca2c37;
+}
+.popular-header a:active {
+	background-color: #ba2732;
+}
+.items-main {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	padding-left: 0px;
+	justify-content: space-between;
+	margin-bottom: 0px;
+}
+.items-main li {
+	border: 1px solid #e5e5e5;
+	margin-bottom: 20px;
+}
+.low {
+	margin-top: 0px;
+}
+.brands {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin-top: 20px;
+	margin-bottom: 65px;
+}
+.brands-link {
+	display: flex;
+	flex-direction: row;
+	width: 220px;
+	height: 145px;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid #e5e5e5;
+	margin-bottom: 20px;
+}
+.brands-link:hover {
+	box-shadow: 0px 5px 35px -10px #000000;
+}
+.brands-link:active {
+	box-shadow: 0px 5px 25px -10px #000000;
+}
+.brands-link:active img {
+	opacity: 0.5;
+}
+
+.big-slider-slides {
+	width: 200%;
+}
+
+.big-slider-slides img {
+	float: left;
+}
+.big-slider-inner {
+	overflow: hidden;
+}
+.big-slider-controls label {
+  display: inline-block;
+  margin: 0 3px;
+  width: 7px;
+  height: 7px;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 2px solid white;
+}
+.big-slider input[type="radio"] {
+  display: none;
+}
+#btn-1:checked ~ .big-slider-controls label[for="btn-1"],
+#btn-2:checked ~ .big-slider-controls label[for="btn-2"] {
+  background-color: #ee3643;
+}
+#btn-1:checked ~ .big-slider-inner .big-slider-slides {
+  transform: translate(0);
+}
+
+#btn-2:checked ~ .big-slider-inner .big-slider-slides {
+  transform: translate(-620px);
+}
+#btn-3:checked ~ .big-slider-inner .big-slider-slides {
+  transform: translate(0);
+}
+
+#btn-4:checked ~ .big-slider-inner .big-slider-slides {
+  transform: translate(-620px);
+}
+.big-slider-controls {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	position: absolute;
+	z-index: 1;
+	margin-left: 293px;
+	margin-top: 220px;
+}
+.big-slider a {
+	background-color: #ee3643;
+	color: #fff;
+	width: 195px;
+	height: 38px;
+	box-sizing: border-box;
+	text-align: center;
+	padding-top: 10px;
+	border-radius: 3px;
+	display: inline-block;
+	margin-top: -62px;
+	margin-left: 26px;
+	position: absolute;
+	text-transform: uppercase;
+}
+
+.big-slider a:hover {
+	background-color: #ca2c37;
+}
+.big-slider a:active {
+	background-color: #ba2732;
+}
+.slider-rows label {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: transparent;
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+}
+.slider-rows {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	position: absolute;
+	z-index: 1;
+	margin-top: 120px;
+	margin-left: 25px;
+}
+.left {
+	margin-right: 505px;
+	transform: rotate(135deg);
+}
+.right {
+    transform: rotate(-45deg);
+}
+.blue-title span {
+	position: absolute;
+	margin-top: 27px;
+	margin-left: 24px;
+}
+.yellow-title span {
+	position: absolute;
+	left: 24px;
+	top: 27px;
+}
+.services {
+	background-color: #f2f6f8;
+	min-width: 960px;
+}
+.main-services {
+	
+}
+.about-services {
+	display: flex;
+	flex-direction: column;
+	width: 410px;
+	padding-top: 68px;
+	margin-bottom: 78px;
+}
+.about-services h3 {
+	margin: 0px;
+	font-size: 30px;
+	text-transform: uppercase;
+	font-family: "Cuprum";
+}
+.about-services p {
+	font-family: "PT Sans";
+	font-size: 13px;
+	line-height: 24px;
+	margin-top: 20px;
+	margin-bottom: 0px;
+}
+.deliv-descrip {
+	width: 375px;
+}
+.deliv-descrip h3 {
+	font-family: "Cuprum";
+	font-size: 36px;
+	text-transform: uppercase;
+	color: #32425c;
+	margin: 0px;
+}
+.deliv-descrip p {
+	font-family: "PT Sans";
+	font-size: 13px;
+	color: #000000;
+	margin-top: 20px;
+}
+.deliv-slide {
+	display: flex;
+	flex-direction: row-reverse;
+	width: 630px;
+	margin-left: 310px;
+	float: left;
+}
+.guarantee-descrip {
+	width: 375px;
+}
+.guarantee-descrip h3 {
+	font-family: "Cuprum";
+	font-size: 36px;
+	text-transform: uppercase;
+	color: #32425c;
+	margin: 0px;
+}
+.guarantee-descrip p {
+	font-family: "PT Sans";
+	font-size: 13px;
+	color: #000000;
+	margin-top: 20px;
+}
+.guarantee-slide {
+	display: flex;
+	flex-direction: row-reverse;
+	width: 630px;
+	margin-left: 0px;
+	float: left;
+}
+.credit-descrip {
+	width: 375px;
+}
+.credit-descrip h3 {
+	font-family: "Cuprum";
+	font-size: 36px;
+	text-transform: uppercase;
+	color: #32425c;
+	margin: 0px;
+}
+.credit-descrip p {
+	font-family: "PT Sans";
+	font-size: 13px;
+	color: #000000;
+	margin-top: 20px;
+}
+.credit-slide {
+	display: flex;
+	flex-direction: row-reverse;
+	width: 630px;
+	margin-left: 0px;
+	float: left;
+}
+.deliv-slide img {
+    margin-left: -110px;
+}
+.guarantee-slide img {
+	margin-left: -210px;
+}
+.credit-slide img {
+	margin-left: -120px;
+}
+.send-request {
+	background-color: #ee3643;
+	width: 195px;
+	height: 38px;
+	color: #fff;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	border-radius: 3px;
+	position: absolute;
+	margin-top: 15px
+}
+.send-request:hover {
+	background-color: #ca2c37;
+}
+.send-request:active {
+	background-color: #ba2732;
+}
+.services-slides {
+	width: 300%;
+}
+.services-inner {
+	overflow: hidden;
+}
+.services-slider input[type="radio"] {
+  display: none;
+}
+
+#dlv-button:checked ~ .services-slider-controls label[for="dlv-button"],
+#grt-button:checked ~ .services-slider-controls label[for="grt-button"],
+#crd-button:checked ~ .services-slider-controls label[for="crd-button"] {
+  background-color: #fff;
+}
+
+#dlv-button:checked ~ .services-inner .services-slides {
+  transform: translate(0);
+}
+
+#grt-button:checked ~ .services-inner .services-slides {
+  transform: translate(-630px);
+}
+
+#crd-button:checked ~ .services-inner .services-slides {
+  transform: translate(-1260px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
